# plumise-petals

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  README.ko.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
contracts/: AgentRegistry.json  RewardPool.json
docs/: ARCHITECTURE.md
scripts/: install.sh
src/plumise_petals/: __init__.py
src/plumise_petals/api/: server.py
src/plumise_petals/chain/: __init__.py  agent.py  auth.py  config.py  proof.py  reporter.py  rewards.py
src/plumise_petals/cli/: __init__.py  run_server.py
src/plumise_petals/server/: __init__.py  metrics.py  plumise_server.py
tests/: test_auth.py  test_chain_agent.py  test_config.py  test_metrics.py  test_reporter.py
tests/e2e/: ARCHITECTURE.md  README.md  USAGE.md  __init__.py  docker-compose.test.yml  run_e2e.sh  test_chain_registration.py  test_metrics_reporting.py  test_multi_node_pipeline.py  test_single_node_inference.py
